[package]
name = "pico-boot"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "^0.1.8"
serialport = "^4.2.0"

[build-dependencies]
reqwest = "^0.11.11"
tokio = { version = "^1.20.1", features = ["full"] }
