[package]
name = "pico-serial"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "^0.1.8"
tokio = { version = "^1.20.1", features = ["full"] }
tokio-serial = "^5.4.3"

[build-dependencies]
reqwest = "^0.11.11"
tokio = { version = "^1.20.1", features = ["full"] }
